--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "express-validator": "^6.14.2",
     "gravatar": "^1.8.2",
     "is-empty": "^1.2.0",
